ADD and UPDATE NULL Types works now

--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -191,6 +191,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         <option
                             value="{{this.type_id}}">{{this.type_name}}</option>
                         {{/each}}
+                        <option value="">None</option>
                     </select>
                     <br>
                     <label>Height (ft):</label> <input type="number" step=".01"
@@ -248,6 +249,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         <option
                             value="{{this.type_id}}">{{this.type_name}}</option>
                         {{/each}}
+                        <option value="">None</option>
                     </select>
                     <br>
                     <label>Height (ft):</label> <input type="text"
