--- a/views/dragons.hbs
+++ b/views/dragons.hbs
@@ -9,7 +9,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
 <html>
     <head>
         <title>Dragons</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="/css/style.css" rel="stylesheet" type="text/css">
         <script
             src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 
@@ -125,6 +125,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
 
         <nav class="navbar">
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="dragons">Dragons</a></li>
                 <li><a href="types.html">Types</a></li>
                 <li><a href="abilities.html">Abilities</a></li>
@@ -134,16 +135,17 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
 
         <!-- browse -->
         <div id="browse" style="display: block">
-            <p><a href="#" onClick="showAll()">Display all forms</a> </p>
+            {{!-- <p><a href="#" onClick="showAll()">Display all forms</a> </p>
+            --}}
             <p><strong>Browse Dragons</strong></p>
-
+            <div class="new-button-container">
+                <button class="new-dragon-btn"
+                    onclick="newDragon()">New Dragon</button>
+            </div>
             <table id="dragons-table">
                 <thead>
                     <tr>
-                        <td>
-                            <button class="new-dragon-btn"
-                                onclick="newDragon()">New Dragon</button>
-                        </td>
+
                     </tr>
                     <tr>
                         {{#each data.[0]}}
@@ -180,7 +182,6 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                 </tbody>
             </table>
         </div>
-        <p>&nbsp;</p>
         <script src="./js/delete_dragon.js"></script>
 
         <!--add new dragon-->
@@ -189,26 +190,39 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                 <legend><strong>Add Dragon</strong></legend>
                 <fieldset class="fields">
                     <label>Name:</label> <input type="text"
-                        name="dragon_name"><br>
+                        name="dragon_name" required><br>
                     <label for="type_id">Type:</label>
                     <select name="type_id" id="type_id">
-                        <option value>None</option>
                         {{#each types}}
                         <option
                             value="{{this.type_id}}">{{this.type_name}}</option>
                         {{/each}}
+                        <option value>None</option>
                     </select>
                     <br>
-                    <label>Height (ft):</label> <input type="number" step=".01"
-                        name="dragon_height"><br>
-                    <label>Weight (lbs):</label> <input type="number" step=".01"
-                        name="dragon_weight"><br>
-                    <label>Age:</label> <input type="number"
-                        name="dragon_age"><br>
+                    <label>Height (ft):</label> <input type="number" step=".1"
+                        min="1"
+                        name="dragon_height" required><br>
+                    <label>Weight (lbs):</label> <input type="number" step=".1"
+                        min="1"
+                        name="dragon_weight" required><br>
+                    <label>Age:</label> <input type="number" min="0"
+                        name="dragon_age" required><br>
                     <label>Personality:</label> <input type="text"
-                        name="dragon_personality"><br>
-                    <label>Alignment:</label> <input type="text"
-                        name="dragon_alignment"><br>
+                        name="dragon_personality" required><br>
+                    <label>Alignment:</label>
+                    <select id="dragon_alignment" name="dragon_alignment">
+                        <option>Lawful Good</option>
+                        <option>Lawful Neutral</option>
+                        <option>Lawful Evil</option>
+                        <option>Neutral Good</option>
+                        <option>True Neutral</option>
+                        <option>Neutral Evil</option>
+                        <option>Chaotic Good</option>
+                        <option>Chaotic Neutral</option>
+                        <option>Chaotic Evil</option>
+                    </select>
+                    <br>
                     <label>Environment:</label> <select id="environment_id"
                         name="environment_id">
                         <!-- Dynamically populate environments -->
@@ -220,7 +234,7 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     <label>Abilities:</label><small> Hold down the Ctrl
                         (windows) or Command (Mac) button to select multiple
                         options.</small><br>
-                    <select id="abilities" name="abilities[]" multiple>
+                    <select id="abilities" name="abilities[]" multiple required>
                         <!-- Dynamically populate abilities -->
                         {{#each abilities}}
                         <option
@@ -228,9 +242,11 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                         {{/each}}
                     </select><br>
                     <label>Number of People Killed:</label> <input type="number"
-                        name="number_of_people_killed"><br>
+                        min="0"
+                        name="number_of_people_killed" required><br>
                     <label>Lore:</label> <textarea id="dragon_lore"
-                        name="dragon_lore" rows="1" cols="20"></textarea>
+                        name="dragon_lore" rows="1" cols="20"
+                        required></textarea>
                 </fieldset>
                 <input class="btn btn-cancel" type="button" value="Cancel"
                     onClick="browseDragons()">
@@ -248,26 +264,40 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     <label>ID:</label> <input type="text" name="dragon_id"
                         id="update-dragon-id" readonly><br>
                     <label>Name:</label> <input type="text" id="input-name"
+                        required
                         name="dragon_name"><br>
                     <label>Type:</label> <select name="type_id" id="input-type">
-                        <option value>None</option>
                         {{#each types}}
                         <option
                             value="{{this.type_id}}">{{this.type_name}}</option>
                         {{/each}}
-
+                        <option value>None</option>
                     </select>
                     <br>
-                    <label>Height (ft):</label> <input type="text"
+                    <label>Height (ft):</label> <input type="number" step=".1"
+                        min="1"
                         id="input-height" name="dragon_height"><br>
-                    <label>Weight (lbs):</label> <input type="text"
+                    <label>Weight (lbs):</label> <input type="number" step=".1"
+                        min="1"
                         id="input-weight" name="dragon_weight"><br>
                     <label>Age:</label> <input type="number" id="input-age"
+                        min="0"
                         name="dragon_age"><br>
                     <label>Personality:</label> <input type="text"
                         id="input-personality" name="dragon_personality"><br>
-                    <label>Alignment:</label> <input type="text"
-                        id="input-alignment" name="dragon_alignment"><br>
+                    <label>Alignment:</label>
+                    <select id="input-alignment" name="dragon_alignment">
+                        <option>Lawful Good</option>
+                        <option>Lawful Neutral</option>
+                        <option>Lawful Evil</option>
+                        <option>Neutral Good</option>
+                        <option>True Neutral</option>
+                        <option>Neutral Evil</option>
+                        <option>Chaotic Good</option>
+                        <option>Chaotic Neutral</option>
+                        <option>Chaotic Evil</option>
+                    </select>
+                    <br>
                     <label>Environment:</label> <select id="input-environment"
                         name="environment_id">
                         <!-- Dynamically populate environments -->
@@ -280,7 +310,8 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     <label>Abilities:</label><small> Hold down the Ctrl
                         (windows) or Command (Mac) button to select multiple
                         options.</small><br>
-                    <select id="input-abilities" name="abilities[]" multiple>
+                    <select id="input-abilities" name="abilities[]" multiple
+                        required>
                         <!-- Dynamically populate abilities -->
                         {{#each abilities}}
                         <option
@@ -289,11 +320,13 @@ https://github.com/osu-cs340-ecampus/nodejs-starter-app/tree/main -->
                     </select>
                     <br>
                     <label>Number of People Killed:</label> <input type="number"
+                        min="0"
                         id="input-number_of_people_killed"
-                        name="number_of_people_killed">
+                        name="number_of_people_killed" required>
                     <br>
                     <label>Lore:</label> <textarea id="input-lore"
-                        name="dragon_lore" rows="1" cols="20"></textarea>
+                        name="dragon_lore" rows="10" cols="100"
+                        required></textarea>
                     <br>
                 </fieldset>
                 <input class="btn btn-cancel" type="button" value="Cancel"
